# psychopass

./: .gitignore  Cargo.toml  README.md  export_onnx.py  install.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yaml
scripts/linux/: build.sh
scripts/macos/: build.sh
scripts/windows/: build.ps1
src-tauri/: .gitignore  Cargo.toml  label_encoder.pkl  pyproject.toml  tauri.bundle.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-python/psychopass/: __init__.py  __main__.py  cache.py  database.py  embedder.py  emotions.py  memory.py  parser.py  utils.py
src-tauri/src-python/psychopass/db/: __init__.py  chat_manager.py  message_manager.py  profile_manager.py  stats_manager.py
src-tauri/src-python/psychopass/parsers/: discord.py  telegram.py
src-tauri/src-python/psychopass/schemas/: __init__.py  emotions.py  events.py  files.py  messages.py  profiles.py  requests.py
src/components/: Chat.svelte  ChatProfile.svelte  ConfirmDialog.svelte  DashCard.svelte  EmotionDialog.svelte  EmotionJar.svelte  EmotionRegion.svelte  ErrorComp.svelte  FeatureCard.svelte  FullProfile.svelte  Message.svelte  SettingsField.svelte  SideBar.svelte  SideButton.svelte  TitleBar.svelte  UserProfile.svelte
src/libs/: contextMenuState.ts  deleteState.ts  emotions.ts  errorhandler.ts  overlayState.ts  pageState.ts  preferences.ts  progressState.ts  types.ts  windowState.ts
src/pages/: Home.svelte  Memory.svelte  Profiles.svelte  Settings.svelte  Upload.svelte
src/routes/: +page.svelte
