[project]
name = "workspace"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "appdirs>=1.4.4",
    "chromadb>=1.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.20.1",
    "onnx-safetensors>=1.2.0",
    "onnxscript>=0.5.6",
    "transformers>=4.50",
    "sentence-transformers>=5.0",
    "torch>=2.1.0",
    "tqdm>=4.67.1",
    "albumentations>=2.0",
    "huggingface-hub>=0.20.0"
]

[dependency-groups]
dev = ["psychopass"]

[tool.uv.workspace]
members = ["src-tauri"]

[tool.uv.sources]
psychopass = { workspace = true }

[tool.pyright]
# See: <https://pytauri.github.io/pytauri/0.5/usage/tutorial/build-standalone/#get-portable-python>
# ref: <https://github.com/microsoft/pyright/blob/1.1.391/docs/configuration.md#environment-options>
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/dist",
    "**/.*",
    "**/pyembed",
    # 👇 necessary, because when `tauri-cli bundles python,
    # it will copy `pyembed` to the target directory (i.e., rust output dir).
    "**/target",
    # 👆
]
