[project]
name = "psychopass"
version = "0.1.0"
description = "Analyze emotions!"
readme = "README.md"
authors = [
    { name = "des0cc" }
]
requires-python = ">=3.13"
dependencies = [
    "pytauri>=0.8,<0.9",
    "pydantic>=2,<3",
    "anyio>=4.10",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13",
    "onnxruntime>=1.23,<2.0",
    "numpy>=2.3,<3.0",
    "tqdm>=4.66,<5.0",
    "appdirs>=1.4,<2.0",
    "chromadb>=1.3.0",
    "transformers>=4.55",
    "sentence-transformers>=5.1"
]

[project.entry-points.pytauri]
ext_mod = "psychopass.ext_mod"

[build-system]
requires = ["setuptools >= 80", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src-python"] }
